fix: h3 education align

--- a/src/components/Card/CardEducation/style.module.scss
+++ b/src/components/Card/CardEducation/style.module.scss
@@ -1,5 +1,8 @@
 .card {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   max-width: 12.5rem;
   max-height: 11.875rem;
   border-radius: 5px;
@@ -8,6 +11,7 @@
   margin-right: 1.625rem;
   margin-bottom: 3.75rem;
   background: #090909;
+  gap: 1.5rem;
   p {
     color: var(--c6, #a3a3a3);
     font-size: 0.875rem;
@@ -24,12 +28,13 @@
     margin-top: 0.625rem;
   }
   h3 {
+    position: relative;
+    bottom: 10px;
     color: var(--c6, #a3a3a3);
     font-size: 1.125rem;
     font-style: normal;
     font-weight: 400;
     line-height: 20px; /* 111.111% */
-    margin-top: 2rem;
   }
   &::before {
     content: '';
